--- a/Styles/_buscadorGifos.scss
+++ b/Styles/_buscadorGifos.scss
@@ -1,3 +1,4 @@
+//Buscador GIFOS mobile:
 #buscadorGifos {
   width: 100%;
   #titulo {
@@ -9,6 +10,9 @@
       margin: 1.866666vw 11.73333333vw 8.26666666vw 12vw;
       font-size: 7vw;
       line-height: 9vw;
+      #brTituloInicio{
+        display: none;
+      }
       #GIFOSSpan {
         color: rgb(48, 202, 194);
       }
@@ -65,6 +69,164 @@
       font-weight: 500;
       font-size: 3.142vw;
       line-height: 6.8vw;
+    }
+  }
+}
+
+//Buscador GIFOS tablet:
+@media only screen and (min-width: 800px) {
+  #buscadorGifos {
+    width: 100%;
+    #titulo {
+      h1 {
+        color: #572ee5;
+        font-family: "Montserrat", sans-serif;
+        font-weight: bold;
+        text-align: center;
+        margin: 1.866666vw 11.73333333vw 5vw 12vw;
+        font-size: 5vw;
+        line-height: 7vw;
+        #GIFOSSpan {
+          color: rgb(48, 202, 194);
+        }
+      }
+    }
+    #searchBar {
+      margin-left: 5.333333vw;
+      margin-right: 5.6vw;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      #pjsGifos {
+        width: 60vw;
+        display: block;
+      }
+      #barra {
+        border: 1px solid #572ee5;
+        border-radius: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 10vw;
+        margin-bottom: 6vw;
+        #buscarYMas {
+          padding: 0;
+          margin-left: 14.66666vw;
+          margin-right: 6.4vw;
+          color: #6b7989;
+          width: 57.3333333vw;
+          font-size: 3vw;
+          line-height: 5vw;
+          border: none;
+        }
+        #lupa {
+          margin-right: 5.3333333vw;
+          width: 3vw;
+          height: 3vw;
+        }
+      }
+    }
+    #etiquetasInicio {
+      color: #572ee5;
+      text-align: center;
+      font-family: "Montserrat", sans-serif;
+      margin-bottom: 8vw;
+      #buscadorEtiquetasHome {
+        font-size: 3.7vw;
+        line-height: 6.8vw;
+        margin: 0 18.4vw 0.5333333vw 18.666666vw;
+        font-weight: bold;
+      }
+      #etiquetasEjemplos {
+        margin: 0 20vw 0 20vw;
+        font-weight: 500;
+        font-size: 2.3vw;
+        line-height: 6.8vw;
+      }
+    }
+  }
+}
+
+//Buscador GIFOS desktop:
+@media only screen and (min-width: 1440px) {
+  #buscadorGifos {
+    width: 100%;
+    #titulo {
+      h1 {
+        color: #572ee5;
+        font-family: "Montserrat", sans-serif;
+        font-weight: bold;
+        text-align: center;
+        margin: 0vw 17.56944444vw 1.66666666vw 17.56944444vw;
+        font-size: 2vw;
+        line-height: 3.5vw;
+        #brTituloInicio{
+          display: inline;
+        }
+        #GIFOSSpan {
+          color: rgb(48, 202, 194);
+        }
+      }
+    }
+    #searchBar {
+      margin-left: 5.333333vw;
+      margin-right: 5.6vw;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      #pjsGifos {
+        width: 27.7083333vw;
+        height: 13.19444444vw;
+        display: block;
+      }
+      #barra {
+        border: 1px solid #572ee5;
+        border-radius: 100vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 3.47222222vw;
+        width: 38.263888vw;
+        margin-bottom: 5.06944444vw;
+        #buscarYMas {
+          padding: 0;
+          margin-left: 3.75vw;
+          margin-right: 6.4vw;
+          color: #6b7989;
+          width: 57.3333333vw;
+          font-size: 1vw;
+          line-height: 1vw;
+          border: none;
+        }
+        #lupa {
+          margin-right: 1.38888888vw;
+          width: 1.38888888vw;
+          height: 1.38888888vw;
+        }
+      }
+    }
+    #etiquetasInicio {
+      color: #572ee5;
+      text-align: center;
+      font-family: "Montserrat", sans-serif;
+      margin-bottom: 6.597222222vw;
+      #buscadorEtiquetasHome {
+        font-size: 1.3vw;
+        line-height: 1.8vw;
+        margin: 0 46.770833vw 0.4861vw 46.9097222222vw;
+        font-weight: bold;
+      }
+      #etiquetasEjemplos {
+        text-align: center;
+        font-weight: 500;
+        font-size: 1.18vw;
+        line-height: 1.8vw;
+        #brTextoTrending{
+          display: none;
+        }
+      }
     }
   }
 }
