--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,11 @@
-@import "../PROYECTO_GIFOS/Styles/general";
+@import "./Styles/general";
 
-@import "../PROYECTO_GIFOS/Styles/navbar";
+@import "./Styles/navbar";
+
+@import "./Styles/buscadorGifos";
+
+@import "./Styles/trendingGifos";
+
+@import "./Styles/busqueda";
+
+@import "./Styles/footer";
