--- a/Styles/_navbar.scss
+++ b/Styles/_navbar.scss
@@ -19,10 +19,12 @@
     //Aca se esconde la lista:
     display: none;
     #navLista {
+      margin: 0;
+      position: fixed;
+      display: block;
       width: 100%;
       padding: 0;
       background-color: rgba(87, 46, 229, 0.9);
-      opacity: 90%;
       height: 129.0666666vw;
       max-height: 129.0666666vw;
       li {
@@ -67,7 +69,7 @@
 @media only screen and (min-width: 800px) {
   #header {
     height: 11.875vw;
-    margin-bottom: 9.5vw;
+    margin-bottom: 6.5vw;
     #container {
       width: 100%;
       height: 11.25vw;
@@ -92,6 +94,7 @@
       left: 45%;
       margin-top: 0.625vw;
       #navLista {
+        position: relative;
         height: 11.25vw;
         width: 100%;
         padding: 0;
