--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 #header #site-nav #navLista {
+  z-index: 3;
   margin: 0;
   position: fixed;
   display: block;
@@ -747,21 +748,9 @@ body {
 }
 
 #busqueda #btnVerMas {
-  border: #572EE5 1px solid;
-  border-radius: 100vw;
   width: 33.8666666vw;
   height: 13.3333333vw;
   margin-left: 33.066666vw;
-}
-
-#busqueda #btnVerMas #verMas {
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  color: #572EE5;
-  font-weight: bold;
-  font-size: 2.8vw;
-  line-height: 4.5vw;
-  margin-top: 4.53333333vw;
 }
 
 #infoFooter {
@@ -921,5 +910,46 @@ body {
     margin-bottom: 3.57638888vw;
     margin-top: 0;
   }
+}
+
+#favoritos #corFavPrin {
+  margin-left: 50vw;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin-bottom: 1.8666666666vw;
+}
+
+#favoritos #tituloFavoritos {
+  color: #572EE5;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  font-size: 4.3vw;
+  line-height: 7.8vw;
+  text-align: center;
+  margin-bottom: 12.2666666vw;
+}
+
+#favoritos #galeriaFav {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 41.6vw 41.6vw;
+      grid-template-columns: 41.6vw 41.6vw;
+  -ms-grid-rows: 32vw 32vw 32vw 32vw 32vw 32vw;
+      grid-template-rows: 32vw 32vw 32vw 32vw 32vw 32vw;
+  margin: 0 5.6vw 0 5.6vw;
+  grid-gap: 5.6vw;
+  margin-bottom: 20.8vw;
+}
+
+#favoritos #galeriaFav img {
+  width: 41.6vw;
+  height: 32vw;
+}
+
+#favoritos #btnVerMasFav {
+  width: 33.8666666vw;
+  height: 13.3333333vw;
+  margin-left: 33.066666vw;
+  margin-bottom: 20.8vw;
 }
 /*# sourceMappingURL=style.css.map */
